@@ -20,6 +20,8 @@ Changes in 0.80.0:
       config file option should hold those instead (user *.rpath.org user pass)
     * If a user name is given without a password the password will be prompted
       for if the repository returns a permissions error
+  o Building packages:
+    * Dependencies are now generated for Java .class and .jar files.
   o Code structure:
     * queryrep, query, showchangeset, and update --info all use the same 
       code to determine how to display their data.  Display.py was changed
